Fix IZIN Creatives hero card overlap

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -5983,7 +5983,7 @@ img {
 
 .izin-creatives-view .creatives-service-showcase {
   width: min(100% - 40px, 1280px);
-  margin-top: -165px;
+  margin-top: -130px;
 }
 
 .izin-creatives-view .creatives-service-cards {
@@ -6110,7 +6110,7 @@ img {
 
   .izin-creatives-view .creatives-service-showcase {
     width: calc(100% - 40px);
-    margin-top: -59px;
+    margin-top: -44px;
   }
 
   .izin-creatives-view .creatives-service-cards {
